docs/dolfin/1.4.0/python/source/programmers-reference/cpp/function/index.rst
.. Index file for the dolfin.cpp.function module.

.. _programmers_reference_cpp_function_index:

dolfin.cpp.function module
**************************

Classes:

.. toctree::
    :maxdepth: 1

    ALE
    BoostGraphOrdering
    CCFEMFunction
    CCFEMFunctionSpace
    Constant
    Expression
    FacetArea
    Function
    FunctionAXPY
    FunctionAssigner
    FunctionSpace
    GenericFunction
    Graph
    GraphBuilder
    HierarchicalFunction
    HierarchicalFunctionSpace
    HierarchicalMesh
    HierarchicalMeshFunctionBool
    HierarchicalMeshFunctionDouble
    HierarchicalMeshFunctionInt
    HierarchicalMeshFunctionSizet
    HierarchicalMeshFunctionUInt
    Lagrange
    LagrangeInterpolator
    Legendre
    MeshCoordinates
    MeshDisplacement
    SCOTCH
    SpecialFacetFunction
    SubSpace
    lt_coordinate

Functions:

.. toctree::
    :maxdepth: 1

    ALE_move
    BoostGraphOrdering_compute_cuthill_mckee
    GraphBuilder_compute_dual_graph
    GraphBuilder_local_graph
    Legendre_d2dx
    Legendre_ddx
    Legendre_eval
    SCOTCH_compute_gps
    assign
    between
    ipow
    near
    rand
    seed

Module docstring:

.. automodule:: dolfin.cpp.function
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: